--- a/src/helper_functions/CMakeLists.txt
+++ b/src/helper_functions/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(ciphers VERSION 1.0.0)
+project(helper_functions VERSION 1.0.0)
 
-add_library(helper_functions helper_functions.c)
+add_library(helper_functions STATIC helper_functions.c)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
