--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "src/extern/c-terminal"]
 	path = src/extern/c-terminal
 	url = https://github.com/NilEis/C-Terminal
+	branch = master
+	update = merge
