feat(hashes): add md5 files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,13 @@ option(USE_GMP "Use gmp to support BigInt" ON)
 add_subdirectory(src/extern/c-terminal)
 add_subdirectory(src/ui)
 add_subdirectory(src/ciphers)
+add_subdirectory(src/hashes)
 add_subdirectory(src/helper_functions)
 
 list(APPEND LIBS c_terminal)
 list(APPEND LIBS crypto_ui)
 list(APPEND LIBS ciphers)
+list(APPEND LIBS hashes)
 list(APPEND LIBS helper_functions)
 list(APPEND LIBS m)
 
@@ -25,6 +27,7 @@ if(USE_GMP)
     list(APPEND LIBS gmp)
     target_compile_definitions(crypto_ui PUBLIC USE_GMP)
     target_compile_definitions(ciphers PUBLIC USE_GMP)
+    target_compile_definitions(hashes PUBLIC USE_GMP)
     target_compile_definitions(helper_functions PUBLIC USE_GMP)
 endif()
 
