build(meson.build): default_library=static

--- a/meson.build
+++ b/meson.build
@@ -1,15 +1,13 @@
-project('crypto', 'c', version: '0.0.1', license: 'MIT')
+project('crypto', 'c', version: '0.0.1', license: 'MIT', default_options: ['default_library=static'])
 cc = meson.get_compiler('c')
 
-
-
-gmpDep = dependency('gmp', required: get_option('USE_GMP'))
+gmpDep = dependency('gmp', required: get_option('USE_GMP'), static: true)
 
 if gmpDep.found() and get_option('USE_GMP')
   add_global_arguments('-DUSE_GMP=true', language: 'c')
 endif
 
-mDep = cc.find_library('m', required: true)
+mDep = cc.find_library('m', required: true, static: true)
 
 incdir = include_directories('include')
 
